force-app/main/default/objects/geopointe__GP_Resource_View_Group__c/geopointe__GP_Resource_View_Group__c.object-meta.xml
<CustomObject>
    <label>Geopointe Resource View Group</label>
    <nameField>
        <label>Geopointe Resource View Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Resource View Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>