force-app/main/default/objects/geopointe__GP_Resource_View_Group__c/fields/geopointe__Color__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Color__c</fullName>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>