force-app/main/default/objects/geopointe__GP_Resource_View_Group__c/fields/geopointe__Date_Added__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Date_Added__c</fullName>
    <label>Date Added</label>
    <type>DateTime</type>
</CustomField>