force-app/main/default/objects/geopointe__GP_Resource_View_Group__c/fields/geopointe__Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Modified_Date__c</fullName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>